src/test/resources/tags/extendstag/errors/extends-include-block-error.jinja


{% extends "/errors/include-block-error.html" %}
